helm/apps/paperless/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: paperless-auth
  namespace: paperless
spec:
  forwardAuth:
    address: http://authentik-server.authentik.svc.cluster.vasary.org/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-Authentik-Username
      - X-Authentik-Groups
      - X-Authentik-Email
      - X-Authentik-Name
      - X-Authentik-Uid
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    geron.io/dns-scope: internal
    traefik.ingress.kubernetes.io/router.middlewares: paperless-paperless-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - secretName: docs-vasary-tls
      hosts:
        - docs.vasary.org
  rules:
    - host: docs.vasary.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  name: http
